--- a/src/scss/40_editor/_embed.scss
+++ b/src/scss/40_editor/_embed.scss
@@ -12,7 +12,7 @@ body {
     --embed-title-border: 1px solid var(--background-modifier-border);
 }
 
-.markdown-embed:not(.popover.hover-popover .markdown-embed) {
+.markdown-embed:not(.popover.hover-popover .markdown-embed, .canvas-node-content) {
     border-radius: var(--embed-border-radius);
 
     > div:not(.embed-title, .markdown-embed-link) {
